terraform/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.92"
    }
  }
  required_version = ">= 1.4"

  backend "s3" {
    bucket         = "medical-volunteering-tf-state-amit"
    key            = "prod/terraform.tfstate"
    region         = "ap-south-1"
    dynamodb_table = "medical-volunteering-tf-lock"
    encrypt        = true
  }
}

provider "aws"{
    region = var.aws_region
}

resource "aws_instance" "application_server_ec2"{
    ami = var.ami_id
    instance_type = var.instance_type
    subnet_id = aws_subnet.public.id
    key_name = "medical-volunteering"
    vpc_security_group_ids =  [aws_security_group.ec2_sg.id]
    user_data = file("userdata.sh")
    tags = { 
        Name = "${var.project_name}-server"
  }
}

resource "aws_db_subnet_group" "main" {
  name       = "${var.project_name}-db-subnet-group"
  subnet_ids = [aws_subnet.private.id, aws_subnet.public.id]
  tags = {
    Name = "${var.project_name}-db-subnet-group"
  }
}

resource "aws_db_instance" "db_server_ec2" {
    identifier = "${var.project_name}-db"
    engine = "mysql"
    engine_version = "8.0"
    instance_class = "db.t3.micro"
    allocated_storage = 20
    db_name = var.db_name
    username = var.db_username
    password = var.db_password
    db_subnet_group_name = aws_db_subnet_group.main.name
    vpc_security_group_ids = [aws_security_group.rds_sg.id]
    skip_final_snapshot = true
    tags ={
         Name = "${var.project_name}-db"
    }
  }
resource "aws_lb" "main" {
  name               = "${var.project_name}-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.ec2_sg.id]
  subnets            = [aws_subnet.public.id,  aws_subnet.public_2.id]

  tags = {
    Name = "${var.project_name}-alb"
  }
}
resource "aws_lb_target_group" "main" {
  name     = "${var.project_name}-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id

  health_check {
    path                = "/"
    healthy_threshold   = 2
    unhealthy_threshold = 2
    interval            = 30
  }

  tags = {
    Name = "${var.project_name}-tg"
  }
}
resource "aws_lb_listener" "main" {
  load_balancer_arn = aws_lb.main.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.main.arn
  }
}
resource "aws_lb_target_group_attachment" "main" {
  target_group_arn = aws_lb_target_group.main.arn
  target_id        = aws_instance.application_server_ec2.id
  port             = 80
}
